--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -92,7 +92,12 @@ small {
 }
 
 /* Nav */
-.tm-navbar {/*   padding: 19px 63px; */max-width: 840px;min-height: 120px;justify-content:;}
+.tm-navbar {
+  /*   padding: 19px 63px; */
+  max-width: 840px;
+  min-height: 120px;
+  justify-content: ;
+}
 
 .tm-navbar .navbar-nav {
   width: 100%;
@@ -107,22 +112,22 @@ small {
 }
 
 .navbar-light .navbar-nav .nav-link,
-.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .active>.nav-link,
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
-.navbar-light .navbar-nav .show > .nav-link {
+.navbar-light .navbar-nav .show>.nav-link {
   color: #d0984e;
 }
 
-.navbar-light .navbar-nav .nav-item.green-highlight.active > .nav-link, 
-.navbar-light .navbar-nav .nav-item.green-highlight .nav-link.active, 
-.navbar-light .navbar-nav .nav-item.green-highlight .nav-link.show, 
-.navbar-light .navbar-nav .nav-item.green-highlight .show > .nav-link {
+.navbar-light .navbar-nav .nav-item.green-highlight.active>.nav-link,
+.navbar-light .navbar-nav .nav-item.green-highlight .nav-link.active,
+.navbar-light .navbar-nav .nav-item.green-highlight .nav-link.show,
+.navbar-light .navbar-nav .nav-item.green-highlight .show>.nav-link {
   color: #ead6de;
 }
 
 .nav-item {
-  position: relative;  
+  position: relative;
 }
 
 .nav-link {
@@ -161,8 +166,7 @@ small {
   border-top-color: #ead6de;
 }
 
-.nav-item.active.green-highlight
-.tm-nav-link-highlight {
+.nav-item.active.green-highlight .tm-nav-link-highlight {
   background-color: #ead6de;
 }
 
@@ -218,15 +222,15 @@ small {
 .btn-primary {
   background-color: #101911;
   box-shadow: 1px 1px 5px 1px #d0984e;
-  border: 0;  
+  border: 0;
   color: #d0984e;
 }
 
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
-.btn-primary:not(:disabled):not(.disabled).active, 
-.btn-primary:not(:disabled):not(.disabled):active, 
+.btn-primary:not(:disabled):not(.disabled).active,
+.btn-primary:not(:disabled):not(.disabled):active,
 .show>.btn-primary.dropdown-toggle {
   background-color: #2f4732;
   outline: none;
@@ -262,10 +266,10 @@ small {
   width: 110px;
   height: 110px;
   border: 1px solid #3E3F40;
-  border-radius: 50%;  
+  border-radius: 50%;
   display: flex;
   align-items: center;
-  justify-content: center; 
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 60px;
@@ -287,7 +291,7 @@ small {
   max-width: 1230px;
   margin-left: auto;
   margin-right: auto;
-  flex-direction:;
+  flex-direction: ;
 }
 
 .tm-call-to-action-image {
@@ -309,7 +313,7 @@ small {
 .tm-call-to-action-description {
   margin-bottom: 55px;
   font-size: 1.1rem;
-  
+
 }
 
 p {
@@ -430,7 +434,7 @@ p {
 .tm-app-header {
   max-width: 644px;
   margin-left: auto;
-  margin-right: auto;  
+  margin-right: auto;
   margin-bottom: 60px;
 }
 
@@ -443,6 +447,7 @@ p {
   font-size: 2.8rem;
   color: #d0984e;
 }
+
 .small {
   color: #d0984e;
 }
@@ -450,15 +455,15 @@ p {
 .tm-app-feature-box {
   display: flex;
   align-items: center;
-  padding: 50px 40px; 
-  margin-bottom: 40px; 
+  padding: 50px 40px;
+  margin-bottom: 40px;
 }
 
 .tm-app-feature-icon {
   margin-right: 30px;
   border-radius: 50%;
   border: 1px solid;
-  width:  120px;
+  width: 120px;
   height: 120px;
   display: flex;
   align-items: center;
@@ -485,7 +490,7 @@ p {
 .tm-services-parallax-header {
   min-height: 700px;
   display: flex;
-  align-items: center; 
+  align-items: center;
   margin-top: 42px;
   margin-bottom: 22px;
 }
@@ -498,7 +503,7 @@ p {
 }
 
 .tm-services-page-title {
-  font-size: 2.8rem;  
+  font-size: 2.8rem;
   padding-bottom: 37px;
 }
 
@@ -540,7 +545,7 @@ p {
 
 #tmServices .tabs a {
   display: flex;
-  align-items: center;  
+  align-items: center;
   text-align: left;
   text-decoration: none;
   text-transform: uppercase;
@@ -551,7 +556,7 @@ p {
   font-size: 20px;
   font-weight: 700;
   padding: 20px 30px;
-  transition: all 0.3s;  
+  transition: all 0.3s;
 }
 
 /* #tmServices .tabs .icon-wrap {
@@ -601,14 +606,22 @@ ul li .icon-wrap i {
   color: #d0984e;
   /* font-size: 36px; */
 }
-
-#tmServices .tabs .active,
-#tmServices .tabs a:hover {
-    border-color: white;
-    color: #fff!important;
+ul li a.active .icon-wrap {
+  border: 1px solid #e8c18e !important;
+  border-radius: 50%;
+  /* color: #ff0000; */
 }
 
-#first-tab-group > div {
+
+#tmServices .tabs .active,
+#tmServices .tabs a:hover,
+.active i::before,
+.active.icon-wrap i {
+  /* border-color: white; */
+  color: #e8c18e !important;
+}
+
+#first-tab-group>div {
   background-color: rgba(15, 29, 32, 0.77);
   color: white;
   padding: 45px 60px;
@@ -618,12 +631,13 @@ ul li .icon-wrap i {
 .tm-service-tab-title,
 .tm-service-tab-p {
   margin-bottom: 40px;
+  color: #d0984e;
 }
 
 /* Testimonials */
 .tm-testimonials-section {
   padding-top: 45px;
-  padding-bottom: 90px;  
+  padding-bottom: 90px;
   margin-left: -35px;
   margin-right: -35px;
 }
@@ -647,7 +661,7 @@ ul li .icon-wrap i {
 }
 
 .tm-testimonial-box {
-  padding: 60px 30px 85px;  
+  padding: 60px 30px 85px;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -663,7 +677,7 @@ ul li .icon-wrap i {
   /* background-color: #d0984e; */
 }
 
-.slick-dots li {  
+.slick-dots li {
   margin: 8px;
 }
 
@@ -675,7 +689,7 @@ ul li .icon-wrap i {
 
 .slick-dots li button:before {
   font-family: inherit;
-  font-size: inherit;  
+  font-size: inherit;
   content: "\f45c";
   opacity: 0.5;
 }
@@ -692,16 +706,16 @@ ul li .icon-wrap i {
 /* Contact page */
 .tm-contact-form {
   height: 100%;
-  padding: 67px 115px 67px 70px;  
+  padding: 67px 115px 67px 70px;
   margin-right: 5px;
 }
 
 .tm-contact-text {
-  padding: 58px 95px 100px 80px;  
+  padding: 58px 95px 100px 80px;
   margin-left: 5px;
 }
 
-.tm-contact-col-left {  
+.tm-contact-col-left {
   margin-bottom: 0;
 }
 
@@ -720,16 +734,20 @@ ul li .icon-wrap i {
   color: white;
 }
 
-.form-control::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+.form-control::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: white;
-  opacity: 1; /* Firefox */
+  opacity: 1;
+  /* Firefox */
 }
 
-.form-control:-ms-input-placeholder { /* Internet Explorer 10-11 */
+.form-control:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: white;
 }
 
-.form-control::-ms-input-placeholder { /* Microsoft Edge */
+.form-control::-ms-input-placeholder {
+  /* Microsoft Edge */
   color: white;
 }
 
@@ -763,71 +781,71 @@ ul li .icon-wrap i {
   }
 
   #navbarNav {
-        position: absolute;
+    position: absolute;
     top: 80px;
     background-color: rgba(255, 255, 255, 0.9);
     z-index: 1001;
   }
 
- .tm-navbar {
-   background-color: transparent;
-   justify-content: flex-end;
- }
+  .tm-navbar {
+    background-color: transparent;
+    justify-content: flex-end;
+  }
 
- .navbar-toggler {
-   background-color: rgba(255,255,255,0.8);
- }
+  .navbar-toggler {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
 
- .tm-home-left {
-   margin-right: 50px;
- }
+  .tm-home-left {
+    margin-right: 50px;
+  }
 
- .tm-feature-box {
-   margin-bottom: 20px;
-   max-width: 600px;   
- }
+  .tm-feature-box {
+    margin-bottom: 20px;
+    max-width: 600px;
+  }
 
- .navbar-expand-lg .navbar-nav .nav-link {
-   padding: 14px 19px;
- }
+  .navbar-expand-lg .navbar-nav .nav-link {
+    padding: 14px 19px;
+  }
 
- .tm-about-box,
- .tm-app-feature-box {
-   margin-left: auto;
-   margin-right: auto;
-   max-width: 600px;
- }
+  .tm-about-box,
+  .tm-app-feature-box {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 600px;
+  }
 
- .tm-tabs-container {
-   flex-direction: column;
- }
+  .tm-tabs-container {
+    flex-direction: column;
+  }
 
- .tm-tab-links {
-   margin-right: 0;
-   margin-bottom: 40px;   
- }
+  .tm-tab-links {
+    margin-right: 0;
+    margin-bottom: 40px;
+  }
 
- .tm-tab-links,
- .tm-tab-contents {
+  .tm-tab-links,
+  .tm-tab-contents {
     margin-left: auto;
     margin-right: auto;
     max-width: 800px;
     width: 100%;
- }
+  }
 
- .tm-contact-col-left {
-   margin-bottom: 40px;   
- }
+  .tm-contact-col-left {
+    margin-bottom: 40px;
+  }
 
 
   .tm-contact-form {
     margin-right: 0;
   }
-  
- .tm-contact-text {
-   margin-left: 0;
- }
- 
+
+  .tm-contact-text {
+    margin-left: 0;
+  }
+
 }
 
 @media (max-width: 849px) {
@@ -873,7 +891,7 @@ ul li .icon-wrap i {
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    bottom: -80px;        
+    bottom: -80px;
   }
 
   .slick-dots li {
@@ -909,12 +927,12 @@ ul li .icon-wrap i {
 }
 
 .img-fluid {
-  width: 350px !important; 
+  width: 350px !important;
 }
 
 
 #CallToAction .img-fluid {
-  width: 249.5px !important; 
+  width: 249.5px !important;
 }
 
 
@@ -927,6 +945,8 @@ ul li .icon-wrap i {
   align-content: center;
 }
 
+
+
 #tab1,
 #tab2,
 #tab3 {
@@ -937,19 +957,31 @@ ul li .icon-wrap i {
   background-color: rgb(16, 25, 17, 0.8) !important;
 }
 
+#tab1 p,
+#tab2 p,
+#tab3 p {
+  color: #d0984e;
+}
+
 #smalltab1,
 #smalltab2,
 #smalltab3 {
   background-color: rgb(16, 25, 17, 0.8) !important;
   border: 2px solid #d0984e !important;
   transition: all 0.3s ease-in-out;
+  color: #d0984e !important;
 }
+/* a#smalltab1.active {
+  color: #f3b565 !important;
+} */
+
 #smalltab1:hover,
 #smalltab2:hover,
 #smalltab3:hover {
   background-color: rgba(30, 47, 33, 0.8) !important;
   transform: scale(1.05);
 }
+
 
 
 
@@ -1042,7 +1074,7 @@ ul li .icon-wrap i {
   color: #d0984e;
   text-decoration: none;
   transition: all 0.3s ease;
-  box-shadow: 0 0 10px rgba(0,0,0,0.4);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
 .whatsapp-icon-floating a:hover {
@@ -1076,7 +1108,8 @@ ul li .icon-wrap i {
 #tmContactForm input::placeholder,
 #tmContactForm textarea::placeholder {
   color: #d0984e !important;
-  opacity: 1; /* Asegura visibilidad en algunos navegadores */
+  opacity: 1;
+  /* Asegura visibilidad en algunos navegadores */
 }
 
 #tmContactForm input,
